--- a/src/Components/Styles/Popular.css
+++ b/src/Components/Styles/Popular.css
@@ -1,20 +1,61 @@
-.card-container {
+/* Popular.css */
+
+.App {
+    text-align: center;
+  }
+  
+  .card-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 1rem;
     justify-content: center;
   }
   
   .card {
-    background-color: white;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-    padding: 1rem;
-    border-radius: 5px;
-    max-width: 300px;
-    width: 100%;
+    display: inline-block;
+    margin: 20px;
+    width: 300px;
+    height: 400px;
+    border: 1px solid black;
+    text-align: center;
+    position: relative;
+    cursor: pointer;
   }
   
-  .card h2 {
+  .card img {
+    height: 200px;
+    width: 200px;
+    margin-top: 20px;
+    object-fit: cover;
+  }
+  
+  .modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .popup {
+    width: 80%;
+    height: 80%;
+    background: white;
+    padding: 20px;
+    position: relative;
+  }
+  
+  .popup img {
+    height: 50%;
+    width: 100%;
+    object-fit: cover;
+  }
+  
+  .popup h2 {
     margin-top: 0;
   }
   
