--- a/src/Components/Styles/Popular.css
+++ b/src/Components/Styles/Popular.css
@@ -1,5 +1,5 @@
 /* Popular.css */
-
+/*
 .App {
     text-align: center;
   }
@@ -62,4 +62,57 @@
   .popup h2 {
     margin-top: 0;
   }
+  */
+
+
+
+  .card-container-wrapper {
+    overflow-x: scroll;
+    width: 100%;
+  }
   
+  .card-container {
+    white-space: nowrap;
+    font-size: 0; /* remove white space between inline-block elements */
+  }
+  
+  .card {
+    width: 20%;
+    display: inline-block;
+    vertical-align: top;
+    margin-right: 1rem;
+    margin-bottom: 1rem;
+    box-sizing: border-box;
+    border: 1px solid gray;
+    padding: 1rem;
+    text-align: center;
+  }
+  
+  .card img {
+    width: 100%;
+    height: auto;
+    margin-bottom: 1rem;
+  }
+  
+  .modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .popup {
+    background-color: white;
+    border-radius: 5px;
+    padding: 1rem;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  }
+  .card-container-wrapper::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+  }
