--- a/src/Components/Styles/Popular.css
+++ b/src/Components/Styles/Popular.css
@@ -70,29 +70,38 @@
     overflow-x: scroll;
     width: 100%;
   }
+
+.card-container {
+  white-space: nowrap;
+  font-size: 0;
+  height: 300px;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+.card {
+  width: calc(15% - 1rem);
+  display: inline-block;
+  vertical-align: top;
+  margin-right: 2rem;
+  margin-bottom: 2rem;
+  box-sizing: border-box;
+  padding: 1.5rem;
+  text-align: center;
+  font-size: 1.2rem;
+  line-height: 1.5;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
+  background-color: beige;
+  border-radius: 30px;
+}
+
+.card img {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+  margin-bottom: 1rem;
+}
+
   
-  .card-container {
-    white-space: nowrap;
-    font-size: 0; /* remove white space between inline-block elements */
-  }
-  
-  .card {
-    width: 20%;
-    display: inline-block;
-    vertical-align: top;
-    margin-right: 1rem;
-    margin-bottom: 1rem;
-    box-sizing: border-box;
-    border: 1px solid gray;
-    padding: 1rem;
-    text-align: center;
-  }
-  
-  .card img {
-    width: 100%;
-    height: auto;
-    margin-bottom: 1rem;
-  }
   
   .modal {
     position: fixed;
