--- a/src/Components/Styles/Home.css
+++ b/src/Components/Styles/Home.css
@@ -1,3 +1,16 @@
+.Popular-card {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: scroll;
+  -webkit-overflow-scrolling: touch;
+  scroll-behavior: smooth;
+}
 
+.Popular-card > * {
+  flex: 0 0 auto;
+  margin-right: 16px;
+}
 
-  
+.Popular-card > :last-child {
+  margin-right: 0;
+}
