--- a/src/Components/Styles/Card.css
+++ b/src/Components/Styles/Card.css
@@ -51,4 +51,20 @@
   .payment-popup button[type="submit"]:hover {
     background-color: #005ae6;
   }
+
+  .game-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   
+  .game-image {
+    width: 100%;
+    max-height: 200px;
+    object-fit: cover;
+  }
+  
+  .game-name {
+    margin-top: 1rem;
+    text-align: center;
+  }
